traefik/rbac.yml
kind: Namespace
apiVersion: v1
metadata:
  name: traefik
