traefik/deployment.yml

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: traefik
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config
          configMap:
            name: traefik-conf
      containers:
        - image: traefik:v1.7-alpine
          name: traefik-ingress-lb
          volumeMounts:
            - mountPath: "/config"
              name: "config"
          ports:
            - name: http
              containerPort: 80
              hostPort: 80
            - name: api
              containerPort: 8080
              hostPort: 8080
            - name: metrics
              containerPort: 8081
              hostPort: 8081
            - name: ping  
              containerPort: 8082
              hostPort: 8082
          args:
            - --logLevel=INFO
            - --kubernetes
            - --configfile=/config/traefik.toml
#         container health checks
          livenessProbe:
            failureThreshold: 2          
            httpGet:
              path: /ping
              port: 8082
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /ping
              port: 8082
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
#         container resource reservations/limits
          resources:
            requests:
              cpu: "0.5"
              memory: "200M"
            limits:
              cpu: "1"
              memory: "2G"
