traefik/service.yml
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: traefik
  # annotations:
  #   service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  loadBalancerIP: 20.54.130.120
  selector:
    app: traefik-ingress-controller
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 8080
      name: admin
    - protocol: TCP
      port: 8081
      name: metrics
